微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div class="cp_content_bg">
-       <div class="hzjm_content">
+       <div class="wm_content">
         <div class="head_top">
 
           <div class="logo">
