微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -30,7 +30,7 @@
         </div>
           <div class="star"><a href="javascript:void(0);" onclick="javascript:document.getElementsByTagName('BODY')[0].scrollTop=document.getElementsByTagName('BODY')[0].scrollHeight;" title="立即体验">立即体验</a></div>
 </div>
-        <div class="cp_slogn">
+        <div class="hzjm_slogn">
             <h1>随用随借 随借随还</h1>
             <h4>让技术和共享助您，轻松出游，完美自拍，快乐分享</h4>
         </div>
