--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,8 @@ body {margin:0 auto; padding:0 auto; height: 100%;}
 
 .hzjm_content{ width:100%;height: 400px;background-size:100% 100%; background: url("/static/images/home/hzjm.jpg") center no-repeat;background-color: #b21d70; }
 .hzjm_slogn{width: 80%;color: white;text-align: center;margin: 100px auto;}
+.zl{width: 900px;margin: 50px auto;}
+
 
 .wm_content{ width:100%;height: 400px;background-size:100% 100%; background: url("/static/images/about/wm_bg.jpg") center no-repeat;background-color: #b21d70; }
 .wm_slogn{width: 80%;color: white;text-align: center;margin: 100px auto;}
