微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -37,23 +37,26 @@
     </div>
     </div>
     <div class="con_white">
-       <h2>轻松四步 秒借秒还</h2>
-        <h5>不用购买和携带，随借随还。消费升级，轻松出游。妈妈再也不用担心忘带了</h5>
-       <div class="cp_sylc"></div>
+       <h2>共享自拍杆助力景区智慧旅游</h2>
+        <h5>智能设备和元计算做基础，加上游客自媒体宣传和大数据运营，为智慧旅游献力</h5>
        <div class="cp_lc_cont">
-            <div class="cp_lc_li">
+            <div class="zl">
+                <div class="zl_t"><img class="icon_img_zpg" src="/static/images/home/ykfw.png"  /></div>
                 <h6>第一步</h6>
                 <div class="cp_lc_sm">就近机柜，随手可用</div>
             </div>
-            <div class="cp_lc_li">
+            <div class="zl_t">
+                <div class="zl_t"><img class="icon_img_zpg" src="/static/images/home/ykfw.png"  /></div>
                 <h6>第二步</h6>
                 <div class="cp_lc_sm">手机扫码，一秒取杆</div>
             </div>
-            <div class="cp_lc_li">
+            <div class="zl_t">
+                <div class="zl_t"><img class="icon_img_zpg" src="/static/images/home/ykfw.png"  /></div>
                 <h6>第三步</h6>
                 <div class="cp_lc_sm">享受美好，想拍就拍</div>
             </div>
-            <div class="cp_lc_li cp_lc_li_right">
+            <div class="zl_t">
+                <div class="zl_t"><img class="icon_img_zpg" src="/static/images/home/ykfw.png"  /></div>
                 <h6>第四步</h6>
                 <div class="cp_lc_sm">随处可还，便捷低价</div>
             </div>
