--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,7 +12,8 @@ body {margin:0 auto; padding:0 auto; height: 100%;}
 
 .hzjm_content{ width:100%;height: 400px;background-size:100% 100%; background: url("/static/images/home/hzjm.jpg") center no-repeat;background-color: #b21d70; }
 .hzjm_slogn{width: 80%;color: white;text-align: center;margin: 100px auto;}
-.zl{width: 21%;padding: 2%;float: left;font-size: 14px;line-height: 22px;color: #666666;margin-top: -50px;font-weight: 100;}
+.zl_cont{width: 900px;margin:50px auto;text-align: center;}
+.zl{width: 25%;float: left;font-size: 14px;line-height: 22px;color: #666666;margin-top: -50px;font-weight: 100;}
 .zl_t{width: 160px;height: 160px;background: url("/static/images/home/ybg.png") center no-repeat;margin: 20px auto;}
 
 
