--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -36,7 +36,7 @@
         </div>
     </div>
     </div>
-    <div class="con_white">
+    <div class="con_white hzjm_top">
        <h2>共享自拍杆助力景区智慧旅游</h2>
         <h5>智能设备和元计算做基础，加上游客自媒体宣传和大数据运营，为智慧旅游献力</h5>
        <div class="zl_cont">
