微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -41,22 +41,22 @@
         <h5>智能设备和元计算做基础，加上游客自媒体宣传和大数据运营，为智慧旅游献力</h5>
        <div class="zl_cont">
             <div class="zl">
-                <div class="zl_t"><img class="icon_img_zpg" src="/static/images/home/ykfw.png"  /></div>
+                <div class="zl_t"><img src="/static/images/home/ykfw.png"  /></div>
                 <h6>第一步</h6>
                 <div class="cp_lc_sm">就近机柜，随手可用</div>
             </div>
             <div class="zl">
-                <div class="zl_t"><img class="icon_img_zpg" src="/static/images/home/ykfw.png"  /></div>
+                <div class="zl_t"><img src="/static/images/home/ykfw.png"  /></div>
                 <h6>第二步</h6>
                 <div class="cp_lc_sm">手机扫码，一秒取杆</div>
             </div>
             <div class="zl">
-                <div class="zl_t"><img class="icon_img_zpg" src="/static/images/home/ykfw.png"  /></div>
+                <div class="zl_t"><img src="/static/images/home/ykfw.png"  /></div>
                 <h6>第三步</h6>
                 <div class="cp_lc_sm">享受美好，想拍就拍</div>
             </div>
             <div class="zl">
-                <div class="zl_t"><img class="icon_img_zpg" src="/static/images/home/ykfw.png"  /></div>
+                <div class="zl_t"><img src="/static/images/home/ykfw.png"  /></div>
                 <h6>第四步</h6>
                 <div class="cp_lc_sm">随处可还，便捷低价</div>
             </div>
