--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,8 @@ body {margin:0 auto; padding:0 auto; height: 100%;}
 .hzjm_top{margin-top: -30px;}
 .zl_cont{width: 900px;margin:50px auto;text-align: center;}
 .zl{width: 25%;float: left;font-size: 14px;line-height: 22px;color: #666666;margin-top: -50px;font-weight: 100;}
-.zl_t{width: 120px;height:auto;overflow: hidden;text-align: center;}
+.zl_t{width: 120px;height:auto;text-align: center;margin: 0 auto;}
+.icon_img_zl{width: 100px;height: auto;overflow: hidden;}
 
 
 .wm_content{ width:100%;height: 400px;background-size:100% 100%; background: url("/static/images/about/wm_bg.jpg") center no-repeat;background-color: #b21d70; }
