微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -42,21 +42,23 @@
        <div class="zl_cont">
             <div class="zl">
                 <div class="zl_t"><img  class="icon_img_zl" src="/static/images/home/ykfw.png"  /></div>
-                <h6>第一步</h6>
-                <div class="cp_lc_sm">就近机柜，随手可用</div>
+                <h6>提升游客体验</h6>
+                <div class="cp_lc_sm">微信平台每日上传照片10亿张，其中1/3是自拍照片<br>
+自拍发生的场景最高是出游，其次是聚会、逛街、活动等<br>
+共享自拍杆，让游客更便捷任意的自拍，服务好游客</div>
             </div>
             <div class="zl">
-                <div class="zl_t"><img  class="icon_img_zl" src="/static/images/home/ykfw.png"  /></div>
+                <div class="zl_t"><img  class="icon_img_zl" src="/static/images/home/jqxc.png"  /></div>
                 <h6>第二步</h6>
                 <div class="cp_lc_sm">手机扫码，一秒取杆</div>
             </div>
             <div class="zl">
-                <div class="zl_t"><img class="icon_img_zl"  src="/static/images/home/ykfw.png"  /></div>
+                <div class="zl_t"><img class="icon_img_zl"  src="/static/images/home/ykxy.png"  /></div>
                 <h6>第三步</h6>
                 <div class="cp_lc_sm">享受美好，想拍就拍</div>
             </div>
             <div class="zl">
-                <div class="zl_t"><img class="icon_img_zl" src="/static/images/home/ykfw.png"  /></div>
+                <div class="zl_t"><img class="icon_img_zl" src="/static/images/home/sjyy.png"  /></div>
                 <h6>第四步</h6>
                 <div class="cp_lc_sm">随处可还，便捷低价</div>
             </div>
