微信公众号建设

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,7 @@ body {margin:0 auto; padding:0 auto; height: 100%;}
 .hzjm_top{margin-top: -30px;}
 .zl_cont{width: 900px;margin:50px auto;text-align: center;}
 .zl{width: 25%;float: left;font-size: 14px;line-height: 22px;color: #666666;font-weight: 100;text-align: center;}
-.zl_t{width: 120px;height:auto;}
+.zl_t{width: 120px;height:auto;margin: 10px auto;}
 .icon_img_zl{width: 120px;height: auto;overflow: hidden;}
 
 
