微信公众号建设

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,7 @@ body {margin:0 auto; padding:0 auto; height: 100%;}
 .zl{width: 25%;float: left;font-size: 14px;line-height: 22px;color: #666666;font-weight: 100;text-align: center;}
 .zl_t{width: 120px;height:auto;margin: 10px auto;}
 .icon_img_zl{width: 120px;height: auto;overflow: hidden;}
+.zl_text{text-align: left;}
 
 
 .wm_content{ width:100%;height: 400px;background-size:100% 100%; background: url("/static/images/about/wm_bg.jpg") center no-repeat;background-color: #b21d70; }
