--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -43,7 +43,7 @@
             <div class="zl">
                 <div class="zl_t"><img  class="icon_img_zl" src="/static/images/home/ykfw.png"  /></div>
                 <h6 class="hzjm_top">提升游客体验</h6>
-                <div class="cp_lc_sm">微信平台每日上传照片10亿张，其中1/3是自拍照片<br>
+                <div class="cp_lc_sm zl_text">微信平台每日上传照片10亿张，其中1/3是自拍照片<br>
 自拍发生的场景最高是出游，其次是聚会、逛街、活动等<br>
 共享自拍杆，让游客更便捷任意的自拍，服务好游客</div>
             </div>
