微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -50,21 +50,21 @@
             <div class="zl">
                 <div class="zl_t"><img  class="icon_img_zl" src="/static/images/home/jqxc.png"  /></div>
                 <h6  class="hzjm_top">增加景区宣传</h6>
-                <div class="cp_lc_sm">1)游客作为自媒体，进行照片分享传播，真实直观影响大<br>
+                <div class="cp_lc_sm zl_text">1)游客作为自媒体，进行照片分享传播，真实直观影响大<br>
 2)游客社交媒体分享，传播速度快、范围广、目标准<br>
 3)由图片分享引出的景区宣传，更自然，转化和接受度高</div>
             </div>
             <div class="zl">
                 <div class="zl_t"><img class="icon_img_zl"  src="/static/images/home/ykxy.png"  /></div>
                 <h6  class="hzjm_top">吸引更多游客</h6>
-                <div class="cp_lc_sm">1)精彩照片吸引，时尚便捷的景区共享服务，感受消费升级<br>
+                <div class="cp_lc_sm zl_text">1)精彩照片吸引，时尚便捷的景区共享服务，感受消费升级<br>
 2)轻拍科技的全球用户群进行运营推广，市场活动<br>
 3)轻拍科技官网公众号等渠道，合作景区的展示推广</div>
             </div>
             <div class="zl">
                 <div class="zl_t"><img class="icon_img_zl" src="/static/images/home/sjyy.png"  /></div>
                 <h6  class="hzjm_top">助力大数据运营</h6>
-                <div class="cp_lc_sm">1)游客在景区的租借行为数据同步，助力景点运营和预警<br>
+                <div class="cp_lc_sm zl_text">1)游客在景区的租借行为数据同步，助力景点运营和预警<br>
 2)合作景区联盟资源共享，精准游客用户推送</div>
             </div>
        </div>
