微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -61,7 +61,7 @@
 2)轻拍科技的全球用户群进行运营推广，市场活动<br>
 3)轻拍科技官网公众号等渠道，合作景区的展示推广</div>
             </div>
-            <div class="zl">
+            <div class="zl zl_right">
                 <div class="zl_t"><img class="icon_img_zl" src="/static/images/home/sjyy.png"  /></div>
                 <h6  class="hzjm_top">助力大数据运营</h6>
                 <div class="cp_lc_sm zl_text">1)游客在景区的租借行为数据同步，助力景点运营和预警<br>
