微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -43,7 +43,7 @@
             <div class="zl">
                 <div class="zl_t"><img  class="icon_img_zl" src="/static/images/home/ykfw.png"  /></div>
                 <h6 class="hzjm_top">提升游客体验</h6>
-                <div class="cp_lc_sm zl_text">1)微信平台每日上传照片10亿张，其中1/3是自拍照片<br>
+                <div class="cp_lc_sm zl_text">1)微信平台每日上传照片10亿张，约1/3是自拍照片<br>
 2)自拍发生的场景最高是出游，其次是聚会、逛街、活动等<br>
 3)共享自拍杆，让游客更便捷任意的自拍，服务好游客</div>
             </div>
@@ -64,8 +64,8 @@
             <div class="zl zl_right">
                 <div class="zl_t"><img class="icon_img_zl" src="/static/images/home/sjyy.png"  /></div>
                 <h6  class="hzjm_top">助力大数据运营</h6>
-                <div class="cp_lc_sm zl_text">1)游客在景区的租借行为数据同步，助力景点运营和预警<br>
-2)合作景区联盟资源共享，精准游客用户推送</div>
+                <div class="cp_lc_sm zl_text">1)游客在景区的租借行为同步，助力景点运营和预警<br>
+2)合作景区联盟资源共享，精准游客画像</div>
             </div>
        </div>
     </div>
