微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -37,7 +37,7 @@
     </div>
     </div>
     <div class="con_white">
-       <h2>共享自拍杆助力景区智慧旅游</h2>
+       <h2>共享自拍杆 助力景区智慧旅游</h2>
         <h5>智能设备和元计算做基础，加上游客自媒体宣传和大数据运营，为智慧旅游献力</h5>
        <div class="zl_cont">
             <div class="zl">
@@ -71,8 +71,8 @@
     </div>
     <div class="zpg_fg"></div>
     <div class="con_gray">
-        <h2>时尚自拍杆 任你嗨自拍</h2>
-        <h5>设计时尚大方，使用方便灵活，还可应急给手机充电</h5>
+        <h2>经济政策利好 市场趋势方向</h2>
+        <h5>“分享经济”已经成为中国经济发展的又一关键词，未来几年共享经济仍将保持年均40%左右的高速增长</h5>
         <div class="zpg_cont">
             <div class="zpg_cont_li">
                 <div class="zpg_left">
