微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -37,33 +37,33 @@
     </div>
     </div>
     <div class="con_white">
-       <h2>共享自拍杆 助力景区智慧旅游</h2>
+       <h2>共享自拍杆 4大助力景区智慧旅游</h2>
         <h5>智能设备和元计算做基础，加上游客自媒体宣传和大数据运营，为智慧旅游献力</h5>
        <div class="zl_cont">
             <div class="zl">
                 <div class="zl_t"><img  class="icon_img_zl" src="/static/images/home/ykfw.png"  /></div>
-                <h6 class="hzjm_top">提升游客体验</h6>
+                <h6 class="hzjm_top">1.提升游客体验</h6>
                 <div class="cp_lc_sm zl_text">1)微信平台每日上传照片10亿张，约1/3是自拍照片<br>
 2)自拍发生的场景最高是出游，其次是聚会、逛街、活动等<br>
 3)共享自拍杆，让游客更便捷任意的自拍，服务好游客</div>
             </div>
             <div class="zl">
                 <div class="zl_t"><img  class="icon_img_zl" src="/static/images/home/jqxc.png"  /></div>
-                <h6  class="hzjm_top">增加景区宣传</h6>
+                <h6  class="hzjm_top">2.增加景区宣传</h6>
                 <div class="cp_lc_sm zl_text">1)游客作为自媒体，进行照片分享传播，真实直观影响大<br>
 2)游客社交媒体分享，传播速度快、范围广、目标准<br>
 3)由图片分享引出的景区宣传，更自然，转化和接受度高</div>
             </div>
             <div class="zl">
                 <div class="zl_t"><img class="icon_img_zl"  src="/static/images/home/ykxy.png"  /></div>
-                <h6  class="hzjm_top">吸引更多游客</h6>
+                <h6  class="hzjm_top">3.吸引更多游客</h6>
                 <div class="cp_lc_sm zl_text">1)精彩照片吸引，时尚便捷的景区共享服务，感受消费升级<br>
 2)轻拍科技的全球用户群进行运营推广，市场活动<br>
 3)轻拍科技官网公众号等渠道，合作景区的展示推广</div>
             </div>
             <div class="zl zl_right">
                 <div class="zl_t"><img class="icon_img_zl" src="/static/images/home/sjyy.png"  /></div>
-                <h6  class="hzjm_top">助力大数据运营</h6>
+                <h6  class="hzjm_top">4.助力大数据运营</h6>
                 <div class="cp_lc_sm zl_text">1)游客在景区的租借行为同步，助力景点运营和预警<br>
 2)合作景区联盟资源共享，精准游客画像</div>
             </div>
