--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -15,7 +15,7 @@
 
 {% block content %}
     <div class="div-content">
-        <div style="width:697px;height:550px;border:#ccc solid 1px;" id="dituContent"></div>
+        <div style="width:100%;height:100%;" id="dituContent"></div>
     </div>
     <div class="cabinet_info">
 
@@ -23,68 +23,89 @@
 
     <script src="/static/js/jquery-3.2.1.js"></script>
     <script src="/static/js/relalive.js"></script>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.2&services=true"></script>
+    <script charset="utf-8" src="http://map.qq.com/api/js?v=2.exp"></script>
     <script>
-        function initMap(){
-            createMap();
-            setMapEvent();
-            addMapControl();
-        }
+        window.onload = function(){
 
-        function createMap(){
-            var map = new BMap.Map("dituContent");
-            var point = new BMap.Point({{ lon }}, {{ lat }});
-            map.centerAndZoom(point,19);
+        //直接加载地图
 
-            {% for cabinet in cabinets %}
-                var lat = {{ cabinet.6 }};
-                var lon = {{ cabinet.7 }};
-                var tmp_point = new BMap.Point(lon, lat);
-                addMarker(map, tmp_point, '{{ cabinet.0 }}');
-            {% endfor %}
 
-            window.map = map;
-        }
+            //初始化地图函数  自定义函数名init
+            function init() {
+                //定义map变量 调用 qq.maps.Map() 构造函数   获取地图显示容器
+                 var map = new qq.maps.Map(document.getElementById("dituContent"), {
+                    center: new qq.maps.LatLng({{ lat }},{{ lon }}),      // 地图的中心地理坐标。
+                    zoom:8                                                 // 地图的中心地理坐标。
+                });
+            }
 
-        function setMapEvent(){
-            map.enableDragging();
-            map.enableScrollWheelZoom();
-            map.enableDoubleClickZoom();
-            map.enableKeyboard();
-        }
+            //调用初始化函数地图
+            init();
 
-        function addMapControl(){
-            var ctrl_nav = new BMap.NavigationControl({anchor:BMAP_ANCHOR_TOP_LEFT,type:BMAP_NAVIGATION_CONTROL_LARGE});
-            map.addControl(ctrl_nav);
-            var ctrl_ove = new BMap.OverviewMapControl({anchor:BMAP_ANCHOR_BOTTOM_RIGHT,isOpen:1});
-            map.addControl(ctrl_ove);
-            var ctrl_sca = new BMap.ScaleControl({anchor:BMAP_ANCHOR_BOTTOM_LEFT});
-            map.addControl(ctrl_sca);
-        }
-
-        function addMarker(map, point, cabinet_id){
-          var marker = new BMap.Marker(point);
-
-          marker.setTitle(cabinet_id);
-          marker.addEventListener("click",get_attribute);
-          map.addOverlay(marker);
 
         }
-        function get_attribute(e) {
-            var p = e.target;
-            var cabinet_id = parseInt(p.getTitle());
-
-            $.ajax({
-                type:"post",
-                url:"/weixin/get_cabinet_info/",//自己填写请求地址
-                data:{cabinet_id:cabinet_id},
-                success:function(result){
-                    $('.cabinet_info').html(result);
-                }
-            });
-        }
-
-        initMap();
     </script>
+{#    <script>#}
+{#        function initMap(){#}
+{#            createMap();#}
+{#            setMapEvent();#}
+{#            addMapControl();#}
+{#        }#}
+{##}
+{#        function createMap(){#}
+{#            var map = new BMap.Map("dituContent");#}
+{#            var point = new BMap.Point({{ lon }}, {{ lat }});#}
+{#            map.centerAndZoom(point,19);#}
+{##}
+{#            {% for cabinet in cabinets %}#}
+{#                var lat = {{ cabinet.6 }};#}
+{#                var lon = {{ cabinet.7 }};#}
+{#                var tmp_point = new BMap.Point(lon, lat);#}
+{#                addMarker(map, tmp_point, '{{ cabinet.0 }}');#}
+{#            {% endfor %}#}
+{##}
+{#            window.map = map;#}
+{#        }#}
+{##}
+{#        function setMapEvent(){#}
+{#            map.enableDragging();#}
+{#            map.enableScrollWheelZoom();#}
+{#            map.enableDoubleClickZoom();#}
+{#            map.enableKeyboard();#}
+{#        }#}
+{##}
+{#        function addMapControl(){#}
+{#            var ctrl_nav = new BMap.NavigationControl({anchor:BMAP_ANCHOR_TOP_LEFT,type:BMAP_NAVIGATION_CONTROL_LARGE});#}
+{#            map.addControl(ctrl_nav);#}
+{#            var ctrl_ove = new BMap.OverviewMapControl({anchor:BMAP_ANCHOR_BOTTOM_RIGHT,isOpen:1});#}
+{#            map.addControl(ctrl_ove);#}
+{#            var ctrl_sca = new BMap.ScaleControl({anchor:BMAP_ANCHOR_BOTTOM_LEFT});#}
+{#            map.addControl(ctrl_sca);#}
+{#        }#}
+{##}
+{#        function addMarker(map, point, cabinet_id){#}
+{#          var marker = new BMap.Marker(point);#}
+{##}
+{#          marker.setTitle(cabinet_id);#}
+{#          marker.addEventListener("click",get_attribute);#}
+{#          map.addOverlay(marker);#}
+{##}
+{#        }#}
+{#        function get_attribute(e) {#}
+{#            var p = e.target;#}
+{#            var cabinet_id = parseInt(p.getTitle());#}
+{##}
+{#            $.ajax({#}
+{#                type:"post",#}
+{#                url:"/weixin/get_cabinet_info/",//自己填写请求地址#}
+{#                data:{cabinet_id:cabinet_id},#}
+{#                success:function(result){#}
+{#                    $('.cabinet_info').html(result);#}
+{#                }#}
+{#            });#}
+{#        }#}
+{##}
+{#        initMap();#}
+{#    </script>#}
 
 {% endblock %}
