--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,6 +19,10 @@ body {margin:0 auto; padding:0 auto; height: 100%;}
 .zl_t{width: 120px;height:auto;margin: 10px auto;}
 .icon_img_zl{width: 120px;height: auto;overflow: hidden;}
 .zl_text{text-align: left; line-height: 30px;padding-top: 10px;padding-bottom: 50px;}
+.zclh_l{width: 45%;float: left;margin-right: 10%;text-align: left;font-size: 14px; font-weight: 200;line-height: 30px;color: #666666;}
+.zclh_tw{width: 100%;height: 100px;float: left;color: #333333;margin-bottom: 50px;}
+.img_zclh{float: left;width: 80px;height: 80px;border: none;margin-right: 20px;}
+
 
 
 .wm_content{ width:100%;height: 400px;background-size:100% 100%; background: url("/static/images/about/wm_bg.jpg") center no-repeat;background-color: #b21d70; }
