--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -15,7 +15,7 @@
 
 {% block content %}
     <div class="div-content">
-        <div style="width:100%;height:100%;" id="dituContent"></div>
+        <div style="min-width:600px;min-height:767px;" id="dituContent"></div>
     </div>
     <div class="cabinet_info">
 
@@ -34,7 +34,7 @@
             function init() {
                 //定义map变量 调用 qq.maps.Map() 构造函数   获取地图显示容器
                  var map = new qq.maps.Map(document.getElementById("dituContent"), {
-                    center: new qq.maps.LatLng({{ lon }},{{ lat }}),      // 地图的中心地理坐标。
+                    center: new qq.maps.LatLng({{ lat }},{{ lon }}),      // 地图的中心地理坐标。
                     zoom:8                                                 // 地图的中心地理坐标。
                 });
             }
