微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -74,41 +74,11 @@
         <h2>经济政策利好 市场趋势方向</h2>
         <h5>“分享经济”已经成为中国经济发展的又一关键词，未来几年共享经济仍将保持年均40%左右的高速增长</h5>
         <div class="zpg_cont">
-            <div class="zpg_cont_li">
-                <div class="zpg_left">
-                    <div class="zpg_left_img"><img class="icon_img_zpg" src="/static/images/ownpic/shaoma.png"  /></div>
-                    <h6>扫码取杆</h6>
-                    <div class="zpg_left_sm">支持微信和支付宝扫码即取<br>无需安装APP，取杆简单</div>
-                </div>
-                <div class="zpg_left">
-                    <div class="zpg_left_img"><img class="icon_img_zpg" src="/static/images/ownpic/jiujin.png"  /></div>
-                    <h6>就近可还</h6>
-                    <div class="zpg_left_sm">支持任意机柜可归还自拍杆<br>随您就近还杆，轻松便利</div>
-                </div>
-                <div class="zpg_left">
-                    <div class="zpg_left_img"><img class="icon_img_zpg" src="/static/images/ownpic/chongdian.png"  /></div>
-                    <h6>应急充电</h6>
-                    <div class="zpg_left_sm">自拍杆集成了充电宝<br>为您自拍或摄影保障电力</div>
-                </div>
-            </div>
-            <div class="zpg_cont_li"><img class="zpg_img" src="/static/images/ownpic/cp_zpg.jpg"  /></div>
-            <div class="zpg_cont_li zpg_cont_li_right">
-                <div class="zpg_right">
-                    <div class="zpg_left_img"><img class="icon_img_zpg" src="/static/images/ownpic/mianfei.png"  /></div>
-                    <h6>免费一小时</h6>
-                    <div class="zpg_right_sm">每天一次首小时免费用<br>1小时后，1元/小时，每天8元封顶</div>
-                </div>
-                <div class="zpg_right">
-                    <div class="zpg_right_img"><img class="icon_img_zpg" src="/static/images/ownpic/yajing.png"  /></div>
-                    <h6>部分免押金</h6>
-                    <div class="zpg_right_sm">芝麻信用650分以上，免押金<br>还杆后，押金随时退</div>
-                </div>
-                <div class="zpg_right">
-                    <div class="zpg_right_img"><img class="icon_img_zpg" src="/static/images/ownpic/goumai.png"  /></div>
-                    <h6>喜欢可购买</h6>
-                    <div class="zpg_right_sm">自拍支持出售，仅需49元/根<br>保留超5天未归还，自动转为购买</div>
-                </div>
-            </div>
+           <div class="zclh_l">
+               <div class="zclh_tw">
+                   <img class="icon_img_zl" src="/static/images/home/lkq.jpg"  />从中共十八届五中全会公报首提“分享经济”，到李克强总理在2016年政府工作报告两次提到 “促进分享经济发展”“支持分享经济发展”，再到十三五规划纲要强调“积极发展分享经济”，“分享经济”已经成为中国经济发展的又一关键词。
+               </div>
+           </div>
         </div>
     </div>
     <div class="con_white">
