微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -78,6 +78,13 @@
                <div class="zclh_tw">
                    <img class="icon_img_zl" src="/static/images/home/lkq.jpg"  />从中共十八届五中全会公报首提“分享经济”，到李克强总理在2016年政府工作报告两次提到 “促进分享经济发展”“支持分享经济发展”，再到十三五规划纲要强调“积极发展分享经济”，“分享经济”已经成为中国经济发展的又一关键词。
                </div>
+               2016年2月，十三五规划纲要提出，鼓励搭建资源开放共享平台，积极发展分享经济。<br>
+2016年3月，政府工作报告提出，以体制机制创新促进分享经济发展。<br>
+2016年5月中  李克强总理 共享经济实现闲置资源充分利用，形成新的增长点，为经济注入强劲动力。<br>
+2016年6月夏季达沃斯 李克强：共享经济也是众创经济，让人人参与人人受益。<br>
+2016年7月，《国家信息化发展战略纲要》发布，强调要“发展分享经济，建立网络化协同创新体系”。<br>
+2017年6月21日 李克强主持国务院常务会议 促进分享经济健康发展。<br>
+2017年7月3日 国家发改委等八部委联合印发《关于促进分享经济发展的指导性意见》。
            </div>
         </div>
     </div>
