微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -76,7 +76,8 @@
         <div class="zpg_cont">
            <div class="zclh_l">
                <div class="zclh_tw">
-                   <img class="icon_img_zl" src="/static/images/home/lkq.jpg"  />从中共十八届五中全会公报首提“分享经济”，到李克强总理在2016年政府工作报告两次提到 “促进分享经济发展”“支持分享经济发展”，再到十三五规划纲要强调“积极发展分享经济”，“分享经济”已经成为中国经济发展的又一关键词。
+                   <div class="zclh_img"><img class="img_zc" src="/static/images/home/lkq.jpg"  /></div>
+                   <div class="zclh_gy">从中共十八届五中全会公报首提“分享经济”，到李克强总理在2016年政府工作报告两次提到 “促进分享经济发展”“支持分享经济发展”，再到十三五规划纲要强调“积极发展分享经济”，“分享经济”已经成为中国经济发展的又一关键词。</div>
                </div>
                2016年2月，十三五规划纲要提出，鼓励搭建资源开放共享平台，积极发展分享经济。<br>
 2016年3月，政府工作报告提出，以体制机制创新促进分享经济发展。<br>
