--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -15,7 +15,7 @@
 
 {% block content %}
     <div class="div-content">
-        <div style="min-width:600px;min-height:767px;" id="dituContent"></div>
+        <div style="min-width:600px;min-height:767px;" id="container"></div>
     </div>
     <div class="cabinet_info">
 
@@ -33,10 +33,19 @@
             //初始化地图函数  自定义函数名init
             function init() {
                 //定义map变量 调用 qq.maps.Map() 构造函数   获取地图显示容器
-                 var map = new qq.maps.Map(document.getElementById("dituContent"), {
+                 var map = new qq.maps.Map(document.getElementById("container"), {
                     center: new qq.maps.LatLng({{ lat }},{{ lon }}),      // 地图的中心地理坐标。
-                    zoom:8                                                 // 地图的中心地理坐标。
+                    zoom:13                                                 // 地图的中心地理坐标。
                 });
+
+                var anchor = new qq.maps.Point(6, 6),
+                    size = new qq.maps.Size(24, 24),
+                    origin = new qq.maps.Point(0, 0),
+                    icon = new qq.maps.MarkerImage('/static/images/getheadimg.png', size, origin, anchor);
+                var marker = new qq.maps.Marker({
+                    icon: icon,
+                    map: map,
+                    position:map.getCenter()});
             }
 
             //调用初始化函数地图
