微信公众号建设

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,7 +23,7 @@ body {margin:0 auto; padding:0 auto; height: 100%;}
 .zclh_tw{width: 100%;height: 100px;float: left;color: #333333;margin-bottom: 50px;}
 .zclh_img{float: left;width:30%;border: none;}
 .img_zc{width: 80px;height: auto;border: none;}
-.zclh_gy{float: left;width:70%; text-align: left;line-height: 30px;color: #333333;}
+.zclh_gy{float: left;width:70%; text-align: left;line-height: 22px;color: #333333;font-weight: normal;}
 
 
 
