--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -63,6 +63,7 @@
                 url:"/weixin/get_cabinet_info/",//自己填写请求地址
                 data:{cabinet_id:cabinet_id},
                 success:function(result){
+                    alert(result);
                     $('.cabinet_info').html(result);
                 }
             });
