微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -71,19 +71,11 @@
     </div>
     <div class="zpg_fg"></div>
     <div class="con_gray">
-        <h2>经济政策利好 市场趋势方向</h2>
-        <h5>“分享经济”已经成为中国经济发展的又一关键词，未来几年共享经济仍将保持年均40%左右的高速增长</h5>
+        <h2>三种合作模式及框架 详情请联系我们私聊</h2>
+        <h5>景区运营管理机构、城市代理商、景点合伙人，多种合作运营模式</h5>
         <div class="zpg_cont">
            <div class="zclh_l">
-               <div class="zclh_tw">
-                   <div class="zclh_img"><img class="img_zc" src="/static/images/home/lkq.jpg"  /></div>
-                   <div class="zclh_gy">从十八届五中全会首提“分享经济”，到2016年政府工作报告两次提到“促进分享经济发展”“支持分享经济发展”，再到十三五规划纲要强调“积极发展分享经济”，“分享经济”已成中国经济发展关键词。</div>
-               </div>
-2016年3月，政府工作报告提出，以体制机制创新促进分享经济发展。<br>
-2016年6月，夏季达沃斯 李克强：共享经济也是众创经济，让人人参与人人受益。<br>
-2016年7月，《国家信息化发展战略纲要》发布，强调要发展分享经济<br>
-2017年6月，李克强主持国务院常务会议 促进分享经济健康发展。<br>
-2017年7月，国家发改委等八部委联合印发《关于促进分享经济发展的指导性意见》。
+
            </div>
         </div>
     </div>
