--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -30,9 +30,11 @@
             function init() {
                 //定义map变量 调用 qq.maps.Map() 构造函数   获取地图显示容器
                  var map = new qq.maps.Map(document.getElementById("container"), {
-                    center: new qq.maps.LatLng({{ lat }},{{ lon }}),      // 地图的中心地理坐标。
-                    zoom:13                                                 // 地图的中心地理坐标。
+                     center: new qq.maps.LatLng({{ lat }},{{ lon }}),      // 地图的中心地理坐标。
+                     zoom:13,
+                     scaleControl: true
                 });
+
 
                  {% for cabinet in cabinets %}
                     var lat = {{ cabinet.6 }};
