--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -74,11 +74,22 @@
         <h2>三种合作模式及框架 详情请联系我们私聊</h2>
         <h5>景区运营管理机构、城市代理商、景点合伙人，多种合作运营模式</h5>
         <div class="zpg_cont">
-           <div class="zclh_l">
-
-           </div>
+                <div class="home_ys icon_ys">
+           <div class="home_ys_img"><img class="icon_img" src="{% static 'images/about/shengji.png' %}"></div>
+           <h6>战略合作</h6>
+           <div class="home_ys_sm">消费升级和懒人经济的发展，消费者愿意为更好的体验，更便捷的服务买单。共享物品无需携带存放，随用随借，随借随还。</div>
+       </div>
+       <div class="home_ys icon_ys">
+           <div class="home_ys_img"><img class="icon_img" src="{% static 'images/about/jingshen.png' %}"></div>
+           <h6>联合运营</h6>
+           <div class="home_ys_sm">物品已不再是财富和地方的象征，更在乎的是物品使用而非占有，共享是最好的方式。共享是低碳和经济行为，且减少闲置。</div>
+       </div>
+       <div class="home_ys icon_ys_right">
+           <div class="home_ys_img"><img class="icon_img" src="{% static 'images/about/gongjice.png' %}"></div>
+           <h6>运营商代理</h6>
+           <div class="home_ys_sm">共享模式的便捷服务，激活用户潜在或压抑的需求，提高产品效率和价值。让制造业参与共享经济发展，促进产业的优化发展。</div>
+       </div>
         </div>
-    </div>
     <div class="con_white">
        <h2>炫彩机柜 让自拍杆随借随还</h2>
         <h5>智能时尚机柜，方便识别查找，取还操作简单</h5>
