--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -32,7 +32,11 @@
                  var map = new qq.maps.Map(document.getElementById("container"), {
                      center: new qq.maps.LatLng({{ lat }},{{ lon }}),      // 地图的中心地理坐标。
                      zoom:13,
-                     scaleControl: true
+                     scaleControl: true,
+                     zoomControlOptions:{
+                         position: qq.maps.ControlPosition.TOP_LEFT,
+                         style: qq.maps.ZoomControlStyle.DEFAULT
+                     }
                 });
 
 
