--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -39,12 +39,22 @@
                      }
                 });
 
+                 var anchor = new qq.maps.Point(0, 39),
+                size = new qq.maps.Size(42, 68),
+                origin = new qq.maps.Point(0, 0),
+                icon = new qq.maps.MarkerImage(
+                    "/static/images/getheadimg.png",
+                    size,
+                    origin,
+                    anchor
+                );
+
 
                  {% for cabinet in cabinets %}
                     var lat = {{ cabinet.6 }};
                     var lon = {{ cabinet.7 }};
                     var tmp_point = new qq.maps.LatLng(lat,lon);
-                    addMarker(map, tmp_point, '{{ cabinet.0 }}');
+                    addMarker(map, tmp_point, '{{ cabinet.0 }}', icon);
                 {% endfor %}
 
             }
@@ -53,7 +63,7 @@
             init();
         };
         
-        function addMarker(map, point, cabinet_id) {
+        function addMarker(map, point, cabinet_id, icon) {
             var marker = new qq.maps.Marker({
                 position: point,
                 map: map
@@ -61,6 +71,7 @@
             qq.maps.event.addListener(marker,"click",function(){
                 get_attribute(cabinet_id);
             });
+            marker.setIcon(icon);
         }
 
         function get_attribute(cabinet_id) {
