--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -40,10 +40,11 @@
                 });
 
                  var anchor = new qq.maps.Point(0, 39),
-                size = new qq.maps.Size(42, 68),
+                size = new qq.maps.Size(30, 35),
                 origin = new qq.maps.Point(0, 0),
                 icon = new qq.maps.MarkerImage(
                     "/static/images/getheadimg.png",
+                    size,
                     origin,
                     anchor
                 );
