--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -43,7 +43,7 @@
                 size = new qq.maps.Size(42, 68),
                 origin = new qq.maps.Point(0, 0),
                 icon = new qq.maps.MarkerImage(
-                    "/static/images/timg.png",
+                    "/static/images/getheadimg.png",
                     size,
                     origin,
                     anchor
