--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -23,46 +23,57 @@
 
     <script src="/static/js/jquery-3.2.1.js"></script>
     <script src="/static/js/relalive.js"></script>
-    <script charset="utf-8" src="http://map.qq.com/api/js?v=2.exp"></script>
+    {% ifequal is_weixin True %}
+        <script charset="utf-8" src="http://map.qq.com/api/js?v=2.exp"></script>
+    {% else %}
+        <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=b592c79c6b67ba952132ac8d517706f8"></script>
+    {% endifequal %}
     <script>
         window.onload = function(){
             //初始化地图函数  自定义函数名init
+            var is_weixin = '{{ is_weixin }}';
+
             function init() {
-                //定义map变量 调用 qq.maps.Map() 构造函数   获取地图显示容器
-                 var map = new qq.maps.Map(document.getElementById("container"), {
-                     center: new qq.maps.LatLng({{ lat }},{{ lon }}),      // 地图的中心地理坐标。
-                     zoom:13,
-                     scaleControl: true,
-                     zoomControlOptions:{
-                         position: qq.maps.ControlPosition.TOP_LEFT,
-                         style: qq.maps.ZoomControlStyle.DEFAULT
-                     }
-                });
+                if(is_weixin === 'True')
+                {
+                    //定义map变量 调用 qq.maps.Map() 构造函数   获取地图显示容器
+                     var map = new qq.maps.Map(document.getElementById("container"), {
+                         center: new qq.maps.LatLng({{ lat }},{{ lon }}),      // 地图的中心地理坐标。
+                         zoom:13,
+                         scaleControl: true,
+                         zoomControlOptions:{
+                             position: qq.maps.ControlPosition.TOP_LEFT,
+                             style: qq.maps.ZoomControlStyle.DEFAULT
+                         }
+                    });
 
 
-                 {% for cabinet in cabinets %}
-                    var lat = {{ cabinet.6 }};
-                    var lon = {{ cabinet.7 }};
-                    var tmp_point = new qq.maps.LatLng(lat,lon);
-                    addMarker(map, tmp_point, '{{ cabinet.0 }}');
-                {% endfor %}
+                     {% for cabinet in cabinets %}
+                        var lat = {{ cabinet.6 }};
+                        var lon = {{ cabinet.7 }};
+                        var tmp_point = new qq.maps.LatLng(lat,lon);
+                        addMarker(map, tmp_point, '{{ cabinet.0 }}');
+                    {% endfor %}
+                }
+                else
+                {
+                    var map = new AMap.Map('container',{
+                        zoom: 10,
+                        center: [{{ lon }},{{ lat }}]
+                    });
+
+                    {% for cabinet in cabinets %}
+                        var lat = {{ cabinet.6 }};
+                        var lon = {{ cabinet.7 }};
+                        addMarker_zhifubao(map, lat, lon, '{{ cabinet.0 }}');
+                    {% endfor %}
+                }
+
 
             }
 
             //调用初始化函数地图
             init();
-
-            $(function(){
-                $("#mapcon").bind("DOMNodeInserted",function(e){
-                        var tempCount = 0;
-                    $("#mapcon .smnoprint").siblings().each(function(){
-                        tempCount++;
-                        if(tempCount==2||tempCount==3){
-                            $(this).remove();
-                        }
-                    });
-                });
-            });
         };
         
         function addMarker(map, point, cabinet_id) {
@@ -71,6 +82,17 @@
                 map: map
             });
             qq.maps.event.addListener(marker,"click",function(){
+                get_attribute(cabinet_id);
+            });
+        }
+
+        function addMarker_zhifubao(map, lat, lon, cabinet_id) {
+            var marker = new AMap.Marker({
+                position: [lon, lat],
+                title: cabinet_id,
+                map: map
+            });
+            AMap.event.addListener(marker, 'click', function () {
                 get_attribute(cabinet_id);
             });
         }
