--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -58,6 +58,7 @@
                 else
                 {
                     var map = new AMap.Map('container',{
+                        resizeEnable: true,
                         zoom: 10,
                         center: [{{ lon }},{{ lat }}]
                     });
