--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -68,6 +68,8 @@
 
                     map.addControl(toolBar);
 
+                    toolBar.show();
+
 
                     {% for cabinet in cabinets %}
                         var lat = {{ cabinet.6 }};
