--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -63,7 +63,7 @@
                         center: [{{ lon }},{{ lat }}]
                     });
                     var toolBar = new AMap.ToolBar({
-                        visible: true
+                        visible: false
                     });
 
                     map.addControl(toolBar);
