--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -28,6 +28,7 @@
     {% else %}
         <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=b592c79c6b67ba952132ac8d517706f8"></script>
         <script src="//webapi.amap.com/ui/1.0/main.js"></script>
+        <script type="text/javascript" src="https://webapi.amap.com/demos/js/liteToolbar.js"></script>
     {% endifequal %}
     <script>
         window.onload = function(){
@@ -65,13 +66,13 @@
                     });
 
                     AMap.plugin(['AMap.ToolBar','AMap.Scale','AMap.OverView'],
-    function(){
-        map.addControl(new AMap.ToolBar());
+                        function(){
+                            map.addControl(new AMap.ToolBar());
 
-        map.addControl(new AMap.Scale());
+                            map.addControl(new AMap.Scale());
 
-        map.addControl(new AMap.OverView({isOpen:true}));
-});
+                            map.addControl(new AMap.OverView({isOpen:true}));
+                    });
 
                     {% for cabinet in cabinets %}
                         var lat = {{ cabinet.6 }};
