--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -64,7 +64,7 @@
                         center: [{{ lon }},{{ lat }}]
                     });
 
-                    AMap.plugin(['AMap.ToolBar','AMap.Scale','AMap.OverView'],
+                    map.plugin(['AMap.ToolBar','AMap.Scale','AMap.OverView'],
                         function(){
                             map.addControl(new AMap.ToolBar());
 
