--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -27,6 +27,7 @@
         <script charset="utf-8" src="http://map.qq.com/api/js?v=2.exp"></script>
     {% else %}
         <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=b592c79c6b67ba952132ac8d517706f8"></script>
+        <script type="text/javascript" charset="utf-8" src="http://webapi.amap.com/maps/plugin?v=1.2&key=b592c79c6b67ba952132ac8d517706f8&cls=AMap.ToolBar&vrs=1.2.20.13-160329"></script>
         <script src="//webapi.amap.com/ui/1.0/main.js"></script>
     {% endifequal %}
     <script>
@@ -60,7 +61,7 @@
                 {
                     var map = new AMap.Map('container',{
                         resizeEnable: true,
-                        zoom: 10,
+                        zoom: 16,
                         center: [{{ lon }},{{ lat }}]
                     });
 
@@ -68,7 +69,6 @@
                         toolBar = new AMap.ToolBar();
                         map.addControl(toolBar);
                     });
-                    toolBar.show();
 
                     {% for cabinet in cabinets %}
                         var lat = {{ cabinet.6 }};
@@ -117,7 +117,5 @@
         }
 
     </script>
-    <script type="text/javascript" src="https://webapi.amap.com/demos/js/liteToolbar.js"></script>
-
 
 {% endblock %}
