--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -66,7 +66,7 @@
                     });
 
                     map.plugin(["AMap.ToolBar"],function(){   //在地图中添加ToolBar插件
-                        toolBar = new AMap.ToolBar();
+                        var toolBar = new AMap.ToolBar();
                         map.addControl(toolBar);
                     });
 
