--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -1,117 +1,120 @@
-<!doctype html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
-    <title>带功能控件的地图</title>
-    <link rel="stylesheet" href="http://cache.amap.com/lbs/static/main1119.css"/>
-    <script src="http://cache.amap.com/lbs/static/es5.min.js"></script>
-    <script src="http://webapi.amap.com/maps?v=1.3&key=您申请的key值&&plugin=AMap.Scale,AMap.OverView,AMap.ToolBar"></script>
-</head>
-<body>
-<div id="container"></div>
-<div class='button-group' style="background-color: #0d9bf2;right: 20px">
-    <input type="checkbox" onclick="toggleScale(this)"/>比例尺
-    <input type="checkbox" id="toolbar" onclick="toggleToolBar(this)"/>工具条
-    <input type="checkbox" id="toolbarDirection" disabled onclick="toggleToolBarDirection(this)"/>工具条方向盘
-    <input type="checkbox" id="toolbarRuler" disabled onclick="toggleToolBarRuler(this)"/>工具条标尺
-    <input type="checkbox" id="overview" onclick="toggleOverViewShow(this)"/>显示鹰眼
-    <input type="checkbox" id="overviewOpen" disabled onclick="toggleOverViewOpen(this)"/>展开鹰眼
-</div>
-<script>
-    var scale = new AMap.Scale({
-        visible: false
-    }),
-    toolBar = new AMap.ToolBar({
-        visible: false
-    }),
-    overView = new AMap.OverView({
-        visible: false
-    }),
-    map = new AMap.Map("container", {
-        resizeEnable: true
-    });
-    map.addControl(scale);
-    map.addControl(toolBar);
-    map.addControl(overView);
-    function toggleScale(checkbox) {
-        if (checkbox.checked) {
-            scale.show();
-        } else {
-            scale.hide();
+{% extends "weixin/base.html" %}
+{% load static %}
+{% block title %}茄子自拍{% endblock %}
+{% block head %}
+    <style type="text/css">
+        html,body{margin:0;padding:0;}
+        .iw_poi_title {color:#CC5522;font-size:14px;font-weight:bold;overflow:hidden;padding-right:13px;white-space:nowrap}
+        .iw_poi_content {font:12px arial,sans-serif;overflow:visible;padding-top:4px;white-space:-moz-pre-wrap;word-wrap:break-word}
+    </style>
+
+{% endblock %}
+
+{% block content %}
+    <div class="div-content">
+        <div style="min-width:600px;min-height:500px;" id="container"></div>
+    </div>
+    <div class="cabinet_info">
+
+    </div>
+
+    <script src="/static/js/jquery-3.2.1.js"></script>
+    <script src="/static/js/relalive.js"></script>
+    {% ifequal is_weixin True %}
+        <script charset="utf-8" src="http://map.qq.com/api/js?v=2.exp"></script>
+    {% else %}
+        <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=b592c79c6b67ba952132ac8d517706f8"></script>
+    {% endifequal %}
+    <script>
+        window.onload = function(){
+            //初始化地图函数  自定义函数名init
+            var is_weixin = '{{ is_weixin }}';
+
+            function init() {
+                if(is_weixin === 'True')
+                {
+                    //定义map变量 调用 qq.maps.Map() 构造函数   获取地图显示容器
+                     var map = new qq.maps.Map(document.getElementById("container"), {
+                         center: new qq.maps.LatLng({{ lat }},{{ lon }}),      // 地图的中心地理坐标。
+                         zoom:13,
+                         scaleControl: true,
+                         zoomControlOptions:{
+                             position: qq.maps.ControlPosition.TOP_LEFT,
+                             style: qq.maps.ZoomControlStyle.DEFAULT
+                         }
+                    });
+
+
+                     {% for cabinet in cabinets %}
+                        var lat = {{ cabinet.6 }};
+                        var lon = {{ cabinet.7 }};
+                        var tmp_point = new qq.maps.LatLng(lat,lon);
+                        addMarker(map, tmp_point, '{{ cabinet.0 }}');
+                    {% endfor %}
+                }
+                else
+                {
+                    var map = new AMap.Map('container',{
+                        resizeEnable: true,
+                        zoom: 16,
+                        center: [{{ lon }},{{ lat }}]
+                    });
+
+                    var toolBar = new AMap.ToolBar({
+                        visible: true
+                    });
+
+                    map.addControl(toolBar);
+
+                    toolBar.show();
+
+
+                    {% for cabinet in cabinets %}
+                        var lat = {{ cabinet.6 }};
+                        var lon = {{ cabinet.7 }};
+                        addMarker_zhifubao(map, lat, lon, '{{ cabinet.0 }}');
+                    {% endfor %}
+                }
+
+
+            }
+
+            //调用初始化函数地图
+            init();
+        };
+        
+        function addMarker(map, point, cabinet_id) {
+            var marker = new qq.maps.Marker({
+                position: point,
+                map: map
+            });
+            qq.maps.event.addListener(marker,"click",function(){
+                get_attribute(cabinet_id);
+            });
         }
-    }
-    function toggleToolBar(checkbox) {
-        if (checkbox.checked) {
-            showToolBar();
-            showToolBarDirection();
-            showToolBarRuler();
-        } else {
-            hideToolBar();
-            hideToolBarDirection();
-            hideToolBarRuler();
+
+        function addMarker_zhifubao(map, lat, lon, cabinet_id) {
+            var marker = new AMap.Marker({
+                position: [lon, lat],
+                title: cabinet_id,
+                map: map
+            });
+            AMap.event.addListener(marker, 'click', function () {
+                get_attribute(cabinet_id);
+            });
         }
-    }
-    function toggleToolBarDirection(checkbox) {
-        if (checkbox.checked) {
-            toolBar.showDirection()
-        } else {
-            toolBar.hideDirection()
+
+        function get_attribute(cabinet_id) {
+            $.ajax({
+                type:"post",
+                url:"/weixin/get_cabinet_info/",//自己填写请求地址
+                data:{cabinet_id:cabinet_id},
+                success:function(result){
+                    $('.cabinet_info').html(result);
+                }
+            });
         }
-    }
-    function toggleToolBarRuler(checkbox) {
-        if (checkbox.checked) {
-            toolBar.showRuler();
-        } else {
-            toolBar.hideRuler();
-        }
-    }
-    function toggleOverViewShow(checkbox) {
-        if (checkbox.checked) {
-            overView.show();
-            document.getElementById('overviewOpen').disabled = false;
-        } else {
-            overView.hide();
-            document.getElementById('overviewOpen').disabled = true;
-        }
-    }
-    function toggleOverViewOpen(checkbox) {
-        if (checkbox.checked) {
-            overView.open();
-        }
-        else {
-            overView.close();
-        }
-	}
-    function showToolBar() {
-        document.getElementById('toolbar').checked = true;
-        document.getElementById('toolbarDirection').disabled = false;
-        document.getElementById('toolbarRuler').disabled = false;
-        toolBar.show();
-    }
-    function hideToolBar() {
-        document.getElementById('toolbar').checked = false;
-        document.getElementById('toolbarDirection').disabled = true;
-        document.getElementById('toolbarRuler').disabled = true;
-        toolBar.hide();
-    }
-    function showToolBarDirection() {
-        document.getElementById('toolbarDirection').checked = true;
-        toolBar.showDirection();
-    }
-    function hideToolBarDirection() {
-        document.getElementById('toolbarDirection').checked = false;
-        toolBar.hideDirection();
-    }
-    function showToolBarRuler() {
-        document.getElementById('toolbarRuler').checked = true;
-        toolBar.showRuler();
-    }
-    function hideToolBarRuler() {
-        document.getElementById('toolbarRuler').checked = false;
-        toolBar.hideRuler();
-    }
-</script>
-</body>
-</html>
+
+    </script>
+
+{% endblock %}
