--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -24,6 +24,7 @@
         <script charset="utf-8" src="http://map.qq.com/api/js?v=2.exp"></script>
     {% else %}
         <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=b592c79c6b67ba952132ac8d517706f8"></script>
+        <script src="http://cache.amap.com/lbs/static/es5.min.js"></script>
     {% endifequal %}
     <script>
         window.onload = function(){
