--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -14,6 +14,7 @@
 
     </div>
 
+    <link rel="stylesheet" href="http://cache.amap.com/lbs/static/main1119.css"/>
     <script src="/static/js/jquery-3.2.1.js"></script>
     <script src="/static/js/relalive.js"></script>
     {% ifequal is_weixin True %}
