--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -8,7 +8,7 @@
 
 {% block content %}
     <div class="div-content">
-        <div style="min-width:600px;min-height:500px;" id="container"></div>
+        <div style="min-width:600px;min-height:80%;" id="container"></div>
     </div>
     <div class="cabinet_info">
 
