--- a/templates/weixin/goto_cabinet.html
+++ b/templates/weixin/goto_cabinet.html
@@ -23,50 +23,28 @@
 
     <script src="/static/js/jquery-3.2.1.js"></script>
     <script src="/static/js/relalive.js"></script>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.2&services=true"></script>
+    {% ifequal is_weixin True %}
+        <script charset="utf-8" src="http://map.qq.com/api/js?v=2.exp"></script>
+    {% else %}
+        <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=b592c79c6b67ba952132ac8d517706f8"></script>
+        <script src="http://cache.amap.com/lbs/static/es5.min.js"></script>
+        <script type="text/javascript" src="http://cache.amap.com/lbs/static/addToolbar.js"></script>
+
+
+    {% endifequal %}
     <script>
-        var map = new BMap.Map("dituContent");
-        map.centerAndZoom(new BMap.Point({{ default_lon }}, {{ default_lat }}), 15);
-
-        var myP1 = new BMap.Point({{ default_lon }},{{ default_lat }});    //起点
-        var myP2 = new BMap.Point({{ cabinet_lon }},{{ cabinet_lat }});    //终点
-        var myIcon = new BMap.Icon("http://lbsyun.baidu.com/jsdemo/img/Mario.png", new BMap.Size(32, 70), {    //小车图片
-            //offset: new BMap.Size(0, -5),    //相当于CSS精灵
-            imageOffset: new BMap.Size(0, 0)    //图片的偏移量。为了是图片底部中心对准坐标点。
-          });
-        var driving2 = new BMap.DrivingRoute(map, {renderOptions:{map: map, autoViewport: true}});    //驾车实例
-        driving2.search(myP1, myP2);    //显示一条公交线路
-
-        window.run = function (){
-            var driving = new BMap.DrivingRoute(map);    //驾车实例
-            driving.search(myP1, myP2);
-            driving.setSearchCompleteCallback(function(){
-                var pts = driving.getResults().getPlan(0).getRoute(0).getPath();    //通过驾车实例，获得一系列点的数组
-                var paths = pts.length;    //获得有几个点
-
-                var carMk = new BMap.Marker(pts[0],{icon:myIcon});
-                map.addOverlay(carMk);
-                i=0;
-                function resetMkPoint(i){
-                    carMk.setPosition(pts[i]);
-                    if(i < paths){
-                        setTimeout(function(){
-                            i++;
-                            resetMkPoint(i);
-                        },100);
-                    }
-                }
-                setTimeout(function(){
-                    resetMkPoint(5);
-                },100)
-
-            });
-        };
-
-        setTimeout(function(){
-            run();
-        },1500);
-
+        var map = new AMap.Map("container", {
+            resizeEnable: true,
+            center: [{{ default_lon }}, default_lat],//地图中心点
+            zoom: 13 //地图显示的缩放级别
+        });
+        //步行导航
+        var walking = new AMap.Walking({
+            map: map,
+            panel: "panel"
+        });
+        //根据起终点坐标规划步行路线
+        walking.search([{{ default_lon }}, {{ default_lat }}], [{{ cabinet_lon }}, {{ cabinet_lat }}]);
 
     </script>
 
