--- a/templates/weixin/goto_cabinet.html
+++ b/templates/weixin/goto_cabinet.html
@@ -15,7 +15,8 @@
 
 {% block content %}
     <div class="div-content">
-        <div style="width:697px;height:550px;border:#ccc solid 1px;" id="dituContent"></div>
+        <div style="width:697px;height:550px;border:#ccc solid 1px;" id="container"></div>
+        <div id="panel"></div>
     </div>
     <div class="cabinet_info">
 
