--- a/templates/weixin/nearby.html
+++ b/templates/weixin/nearby.html
@@ -11,6 +11,9 @@
               bottom:-100px;
                display: none;
         }
+        .qqmap-logo {
+                display: none;
+         }
     </style>
 
 
