微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -71,13 +71,21 @@
     </div>
     <div class="zpg_fg"></div>
     <div class="con_gray">
-        <h2>三种合作模式及框架 详情请联系我们私聊</h2>
+        <h2>三种合作模式及框架 因为信任所以简单</h2>
         <h5>景区运营管理机构、城市代理商、景点合伙人，多种合作运营模式</h5>
         <div class="zpg_cont">
                 <div class="home_ys icon_ys">
            <div class="home_ys_img"><img class="icon_img" src="{% static 'images/about/shengji.png' %}"></div>
            <h6>战略合作</h6>
-           <div class="home_ys_sm">消费升级和懒人经济的发展，消费者愿意为更好的体验，更便捷的服务买单。共享物品无需携带存放，随用随借，随借随还。</div>
+           <div class="home_ys_sm">合作景区：<br>
+               1)景区提供场地<br>
+2)机柜广告招商管理和收益归景区<br>
+3)景区安排人员负责日常维护<br><br>
+轻拍科技：<br>
+1)轻拍科技提供硬件设备<br>
+2)为景区增加互联网获客渠道<br>
+3)为景区提供自拍数据<br>
+4)为景区做增值服务</div>
        </div>
        <div class="home_ys icon_ys">
            <div class="home_ys_img"><img class="icon_img" src="{% static 'images/about/jingshen.png' %}"></div>
