微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -75,7 +75,7 @@
         <h5>景区运营管理机构、城市代理商、景点合伙人，多种合作运营模式</h5>
         <div class="zpg_cont">
                 <div class="home_ys icon_ys">
-           <div class="home_ys_img"><img class="icon_img" src="{% static 'images/about/shengji.png' %}"></div>
+           <div class="home_ys_img"><img class="icon_img" src="{% static 'images/home/zlhz.png' %}"></div>
            <h6>战略合作</h6>
            <div class="home_ys_sm zl_text">合作景区：<br>
                1)景区提供场地<br>
