微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -75,7 +75,7 @@
         <h5>景区运营管理机构、城市代理商、景点合伙人，多种合作运营模式</h5>
         <div class="zpg_cont">
                 <div class="home_ys icon_ys">
-           <div class="home_ys_img"><img class="icon_img" src="{% static 'images/home/zlhz.png' %}"></div>
+           <div class="home_ys_img"><img class="icon_img_zl" src="{% static 'images/home/zlhz.png' %}"></div>
            <h6>战略合作</h6>
            <div class="home_ys_sm zl_text">合作景区：<br>
                1)景区提供场地<br>
@@ -98,6 +98,7 @@
            <div class="home_ys_sm">共享模式的便捷服务，激活用户潜在或压抑的需求，提高产品效率和价值。让制造业参与共享经济发展，促进产业的优化发展。</div>
        </div>
         </div>
+    </div>
     <div class="con_white">
        <h2>炫彩机柜 让自拍杆随借随还</h2>
         <h5>智能时尚机柜，方便识别查找，取还操作简单</h5>
