微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -77,7 +77,7 @@
                 <div class="home_ys icon_ys">
            <div class="home_ys_img"><img class="icon_img_zl" src="{% static 'images/home/zlhz.png' %}"></div>
            <h6>战略合作</h6>
-           <div class="home_ys_sm zl_text"><span class="stro">合作景区：</span><br>
+           <div class="home_ys_sm zl_text"><span class="stro">合作景区：<br></span>
                1)景区提供场地<br>
 2)机柜广告招商管理和收益归景区<br>
 3)景区安排人员负责日常维护<br><br>
