微信公众号建设

--- a/templates/home/cooperation.html
+++ b/templates/home/cooperation.html
@@ -81,7 +81,7 @@
                1)景区提供场地<br>
 2)机柜广告招商管理和收益归景区<br>
 3)景区安排人员负责日常维护<br><br>
-轻拍科技：<br>
+<span class="stro">轻拍科技：<br></span>
 1)轻拍科技提供硬件设备<br>
 2)为景区增加互联网获客渠道<br>
 3)为景区提供自拍数据<br>
